<resources>
    <string name="app_name">Build it Bigger</string>
    <string name="settings_name">Settings</string>

    <string name="gce_api_server_address" translatable="false">http://10.0.2.2:8080/_ah/api/</string>

    <string name="instructions">Press the button for a punny dad joke!</string>
    <string name="button_text">Tell Joke</string>
    <string name="action_settings">Settings</string>
    <string name="loading_joke">Loading joke…</string>

    <string name="sp_key_joke_source" translatable="false">jokeSource</string>
    <string name="key_joke_source_local" translatable="false">local</string>
    <string name="key_joke_source_gce" translatable="false">gce</string>
    <string name="default_joke_source" translatable="false">@string/key_joke_source_gce</string>

    <string name="error_loading_joke">Error loading joke data. Is the GCE service running?</string>
</resources>
