<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.udacity.gradle.jokeviewer.JokeViewerActivity">

    <TextView
        android:id="@+id/tv_joke_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:text="Did you hear about the restaurant on the moon?" />

    <Button
        android:id="@+id/btn_show_punch_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_punch_line_button"
        android:onClick="showPunchLine"/>

    <TextView
        android:id="@+id/tv_joke_punch_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:visibility="invisible"
        tools:text="Great food, no atmosphere."/>

</LinearLayout>
