<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/instructions_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/instructions" />

        <Button
            android:id="@+id/btn_tell_joke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tellJoke"
            android:text="@string/button_text" />

        <ProgressBar
            android:id="@+id/pb_loading_joke"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_loading_joke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_joke"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>
